tests/liquid/pos/objects/infer-00.js
var gobj = {
  a: 5
};

/*@ foo :: () => { number | v > 0 } */
function foo () {
  var z = gobj.a;
  return z;
}
