tests/liquid/neg/objects/obj-05.js

/*@ foo :: ({ x: { number | v = 3 }, *: boolean }) => number */
function foo () {
  return x.a;
}
